Time: 16 ms (90.8%), Space: 94.5 MB (46.1%) - LeetHub